--- a/lib/cmake/libhipcxx/libhipcxx-header-search.cmake.in
+++ b/lib/cmake/libhipcxx/libhipcxx-header-search.cmake.in
@@ -17,9 +17,13 @@
 
 # Parse version information from version header:
 unset(_libhipcxx_VERSION_INCLUDE_DIR CACHE) # Clear old result to force search
+
+# Find CMAKE_INSTALL_INCLUDEDIR=@CMAKE_INSTALL_INCLUDEDIR@ directory"
+set(from_install_prefix "@from_install_prefix@")
+
 find_path(_libhipcxx_VERSION_INCLUDE_DIR hip/std/detail/__config
   NO_DEFAULT_PATH # Only search explicit paths below:
   PATHS
-    "${CMAKE_CURRENT_LIST_DIR}/../../../@CMAKE_INSTALL_INCLUDEDIR@" # Install tree
+    "${CMAKE_CURRENT_LIST_DIR}/${from_install_prefix}/@CMAKE_INSTALL_INCLUDEDIR@" # Install tree
 )
 set_property(CACHE _libhipcxx_VERSION_INCLUDE_DIR PROPERTY TYPE INTERNAL)
